kubernetes/poc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: poc

spec:
  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80

  type: LoadBalancer
